tests/test_assets/semantic_invalid.cog
// semantic_invalid.cog

Point :: struct {
    x: i32;
    y: i32;
}

CONST_PI::3.14159;
CONST_PI = 4;

BAD_CALL::some_func();
BAD_DIV::1 / 0;

bad_float_assignment: i64 = 3.14;

10 % 3.0;

bad_cmp_i32: i32 = 1;
bad_cmp_i64: i64 = 2;

bad_cmp_i32 == bad_cmp_i64;
bad_cmp_i32 < bad_cmp_i64;

true < false;
"hello" > "world";

bad_void_var: void;
bad_void_ptr: void*;
bad_void_array: void[4];
bad_void_const: void: 10;

bad_void_param::(value: void) {
}

bad_void_ptr_param::(value: void*) {
}

bad_void_return::() -> void* {
}

BadVoidStruct::struct {
    field: void;
}

BadVoidPointerStruct::struct {
    field: void*;
}

// new
BadBacking :: enum(f32) {
    A,
}

BadValue :: enum(u8) {
    A = 1.5,
}

DuplicateMember :: enum(u8) {
    A,
    A,
}

Color :: enum(u16) {
    Red,
    Green,
    Blue,
}

Color :: enum(u16) {
    Red,
    Green,
    Blue,
}

BadEnumMemberUse1: Color = Color;
BadEnumMemberUse2: Color = Color.Purple;

BadEnumMemberUse3: Color = 1;

OtherEnum :: enum(u16) {
    Red,
}

Color.Red == OtherEnum.Red;

Color.Red < Color.Blue;

Color.Red + Color.Blue;

BAD_COLOR_CONST: Color : 1;

BAD_COLOR_CONST_2 :: Color.Purple;

BAD_COLOR_ASSIGN: Color = 1;

bad_switch_float::(x: f64) -> i32 {
    switch x {
        case 1.0:
            return 1;

        default:
            return 0;
    }
}

bad_switch_enum_case_type::(c: Color) -> i32 {
    switch c {
        case 1:
            return 1;

        default:
            return 0;
    }
}

bad_switch_duplicate_enum::(c: Color) -> i32 {
    switch c {
        case Color.Red:
            return 1;

        case Color.Red:
            return 2;

        default:
            return 0;
    }
}

bad_switch_duplicate_default::(c: Color) -> i32 {
    switch c {
        case Color.Red:
            return 1;

        default:
            return 0;

        default:
            return 2;
    }
}

bad_switch_runtime_case::(x: i32, y: i32) -> i32 {
    switch x {
        case y:
            return 1;

        default:
            return 0;
    }
}

return_bad_empty::() -> i32 {
}

return_bad_if::(b: bool) -> i32 {
    if b {
        return 1;
    }
}

return_bad_switch_no_default::(c: Color) -> i32 {
    switch c {
        case Color.Red:
            return 1;
    }
}

return_bad_switch_case_falls_through::(c: Color) -> i32 {
    switch c {
        case Color.Red:
            return 1;

        default:
            x := 1;
    }
}

bad_cast_struct::() -> i32 {
    return cast(i32, Point {
        x = 1,
        y = 2,
    });
}

bad_cast_bool_to_int::() -> i32 {
    return cast(i32, true);
}

bad_cast_int_to_bool::() -> bool {
    return cast(bool, 1);
}

bad_cast_enum_to_float::() -> f64 {
    return cast(f64, Color.Red);
}

bad_cast_float_to_enum::() -> Color {
    return cast(Color, 1.5);
}

classify_color_missing_case::(c: Color) -> i32 {
    switch c {
        case Color.Red:
            return 1;

        case Color.Green:
            return 2;
    }
}

classify_color_case_falls_through::(c: Color) -> i32 {
    switch c {
        case Color.Red:
            return 1;

        case Color.Green:
            return 2;

        case Color.Blue: {
            x := 3;
        }
    }
}

EnumTooBig :: enum(u8) {
    A = 255,
    B,
}

EnumNegativeUnsigned :: enum(u8) {
    A = -1,
}

EnumTooBigExplicit :: enum(i8) {
    A = 128,
}

EnumTooSmallExplicit :: enum(i8) {
    A = -129,
}

BAD_CAST_U8_TOO_BIG :: cast(u8, 256);
BAD_CAST_U8_NEGATIVE :: cast(u8, -1);
BAD_CAST_I8_TOO_BIG :: cast(i8, 128);
BAD_CAST_I8_TOO_SMALL :: cast(i8, -129);

SmallCastEnum :: enum(u8) {
    A,
    B,
}

BAD_CAST_SMALL_ENUM_TOO_BIG :: cast(SmallCastEnum, 256);
BAD_CAST_SMALL_ENUM_NEGATIVE :: cast(SmallCastEnum, -1);

unreachable_after_return::() -> i32 {
    return 1;

    x := 2;
}

unreachable_after_if::(b: bool) -> i32 {
    if b {
        return 1;
    } else {
        return 2;
    }

    x := 3;
}

unreachable_after_switch::(c: Color) -> i32 {
    switch c {
        case Color.Red:
            return 1;

        default:
            return 0;
    }

    x := 4;
}

break;

continue;

break_invalid_function::() -> void {
    break;
}

continue_invalid_function::() -> void {
    continue;
}

array_index_negative::() -> i32 {
    values: i32[3];

    return values[-1];
}

array_index_too_large::() -> i32 {
    values: i32[3];

    return values[3];
}

BAD_ARRAY_INDEX :: 4;

array_index_bad_const::() -> i32 {
    values: i32[3];

    return values[BAD_ARRAY_INDEX];
}

compound_assignment_bool::() -> void {
    x: bool = true;

    x += 1;
}

COMPOUND_CONST :: 1;

compound_assignment_const::() -> void {
    COMPOUND_CONST += 1;
}

compound_assignment_enum::() -> void {
    c: Color = Color.Red;

    c += 1;
}

// new
compound_assignment_bool::() -> void {
    x: bool = true;

    x += 1;
}

COMPOUND_ASSIGN_CONST :: 1;

compound_assignment_const::() -> void {
    COMPOUND_ASSIGN_CONST += 1;
}

compound_assignment_mixed_concrete_numeric::() -> void {
    x: i32 = 1;
    y: i64 = 2;

    x += y;
}

CompoundColor :: enum {
    Red,
    Green,
    Blue,
}

compound_assignment_enum::() -> void {
    c: CompoundColor = CompoundColor.Red;

    c += 1;
}

COMPOUND_ASSIGN_CONST :: 1;

compound_assignment_const_invalid::() -> void {
    COMPOUND_ASSIGN_CONST += 1;
}

compound_assignment_bool_invalid::() -> void {
    value: bool = true;

    value += 1;
}

compound_assignment_value_bool_invalid::() -> void {
    value: i32 = 1;
    flag: bool = true;

    value += flag;
}

compound_assignment_mixed_types_invalid::() -> void {
    small: i32 = 1;
    large: i64 = 2;

    small += large;
}

CompoundAssignColor :: enum {
    Red,
    Green,
}

compound_assignment_enum_invalid::() -> void {
    color: CompoundAssignColor = CompoundAssignColor.Red;

    color += 1;
}

x: i32 = [1, 2, 3];    // error
[1, 2, 3];             // error

string_initializer_too_small::() -> void {
    s: u8[5] = "hello";
}

string_initializer_wrong_element::() -> void {
    s: i32[6] = "hello";
}

string_initializer_no_type::() -> void {
    s := "hello";
}

string_initializer_invalid_escape::() -> void {
    s: u8[3] = "a\x";
}

takes_name_invalid::(s: u8[6]) -> void {
}

string_argument_wrong_size::() -> void {
    takes_name_invalid("hi");
}

takes_i32_array_invalid::(values: i32[3]) -> void {
}

array_argument_wrong_count::() -> void {
    takes_i32_array_invalid([1, 2]);
}

array_argument_wrong_type::() -> void {
    takes_i32_array_invalid([1, true, 3]);
}


takes_i32_array_wrong::(values: i32[3]) -> void {
}

array_argument_wrong_count_extra::() -> void {
    takes_i32_array_wrong([1, 2]);
}

assign_const_invalid::() -> void {
    ASSIGN_CONST :: 1;
    ASSIGN_CONST = 2;
}

AssignPoint :: struct {
    x: i32;
}

make_assign_point::() -> AssignPoint {
    return AssignPoint {
        x = 0,
    };
}

assign_field_of_rvalue_invalid::() -> void {
    make_assign_point().x = 1;
}

assign_index_of_rvalue_invalid::() -> void {
    make_array()[0] = 1;
}

make_array::() -> i32[3] {
    return [1, 2, 3];
}

assign_enum_member_invalid::() -> void {
    Color.Red = Color.Blue;
}

string_assignment_wrong_size_invalid::() -> void {
    s: u8[4] = "abc";
    s = "hello";
}

string_assignment_wrong_element_invalid::() -> void {
    s: i32[6] = [0, 0, 0, 0, 0, 0];
    s = "hello";
}

array_assignment_wrong_count_invalid::() -> void {
    values: i32[2] = [0, 0];
    values = [1, 2, 3];
}

array_assignment_wrong_type_invalid::() -> void {
    values: i32[3] = [0, 0, 0];
    values = [1, true, 3];
}

return_string_wrong_size_invalid::() -> u8[4] {
    return "hello";
}

return_string_wrong_element_invalid::() -> i32[6] {
    return "hello";
}

return_array_wrong_count_invalid::() -> i32[2] {
    return [1, 2, 3];
}

return_array_wrong_type_invalid::() -> i32[3] {
    return [1, true, 3];
}

bare_string_literal_invalid::() -> void {
    "hello";
}